[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noblox"
version = "0.1.0"
description = "A Python utility package"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["utility", "tools"]
authors = [
    { name = "Chris McKenzie", email = "hello@noblox.pro" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "requests",
    "rich"
]

[project.urls]
Homepage = "https://github.com/noblox.pro/noblox"
Repository = "https://github.com/noblox.pro/noblox.git"
Documentation = "https://noblox.readthedocs.io/"
"Bug Tracker" = "https://github.com/yourusername/noblox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/noblox"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
